fixed footer bug with overflowing side

--- a/css/structure.css
+++ b/css/structure.css
@@ -115,6 +115,7 @@
 }
 
 .footer-container {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
